--- a/community.html
+++ b/community.html
@@ -123,7 +123,7 @@ border-style: solid;
 </head>
 
 <body>
-<a href="home.html"><h1>Final Fantasy XIV</h1></a>
+<a href="home.html" alt="A screenshot insde a home"><h1>Final Fantasy XIV</h1></a>
 <p><img src="assets/inside.jpg">There are tons of ways to interact with the community. You can make a Free Company, and take down tough challenges or make the perfect home base. You 
 can make a linkshell so you can talk no matter the distance, or you can hang out at the Golden Saucer and try some of the minigames. The Party Finder
 will help you find the perfect team to take down that dragon. If you're more of a loner type, the Duty Finder can automatically put you in a team!
